# glasscannon

./: .gitignore  Cargo.toml  glasscannon.toml  pathtraversal.html
res/: 400.html  index.html
res/test/: test.html
src/: http.rs  lib.rs  main.rs  server.rs
